# StreamSightStreamlit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: architecture.md
docs/decisions/: 0001-realtime-architecture.md  0002-streamlit-as-api-client.md  0003-auth-via-bff-token-exchange.md
docs/specs/: api-client.md  api-records.md  app-skeleton.md  auth-flow.md  auth.md  config.md  data-source.md  design-system.md  error-handling.md  feature-capability.md  frontend-pages.md  idle-timeout.md  logout.md  request-id.md  server-log.md  sidebar-width-sync.md  theme-toggle.md  topbar-cms-link.md  ui.md
lib/: admin_management.py  analytics.py  api_client.py  auth.py  config.py  data_source.py  errors.py  idle.py  import_utils.py  mock_data_source.py  models.py  nav.py  realtime.py  realtime_ws.py  request_id.py  sidebar.py  state.py  system_management.py  theme.py  topbar.py  ui.py
pages/: admin.py  analytics.py  dashboard.py  data_management.py  gate.py  realtime_monitor.py  system_management.py
styles/: main.css
test_data/: README.md  import_sample.csv  import_sample.json
tests/: conftest.py
tests/app/: test_analytics.py  test_app_skeleton.py  test_data_management.py  test_realtime_monitor.py  test_system_management.py  test_ui_components.py
tests/unit/: conftest.py  test_admin_management.py  test_analytics.py  test_api_client.py  test_auth.py  test_config.py  test_data_source.py  test_errors.py  test_idle.py  test_import_utils.py  test_mock_data_source.py  (+11 more)
(+8 files in other folders)
