[project]
name = "streamsight-streamlit"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.50.0",
    "pandas==2.3.3",
    "pydantic-settings==2.11.0",
    "httpx==0.28.1",
    "openpyxl==3.1.5",
    "pytest==8.4.2",
]

[tool.pytest.ini_options]
# 讓測試從 repo root 直接 import lib.*
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
